Finished the new projects, moved projects list into own component, fixed logo flicker

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -28,74 +28,3 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-
-.result-list {
-  flex: 1;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-/* 
-Make CSS Fill reaminaing Dynamic height, but still be scrollable
-https://stackoverflow.com/questions/22085498/make-a-div-fill-the-remaining-dynamic-height-and-scroll-without-javascript */
-.result-list__virtual-list-wrapper {
-  flex: 1;
-  position: relative;
-  width: 100%;
-}
-
-.result-list__virtual-list {
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  height: 100%;
-  width: 100%;
-
-  overflow: auto;
-}
-
-.search-result {
-  height: 80px;
-  width: 95%;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 10px;
-  border-bottom: 1px solid var(--color);
-}
-
-.search-result:hover {
-  border-bottom: 1px solid var(--color);
-}
-
-.search-result__left {
-  width: 88px;
-  margin-right: 10px;
-}
-
-.search-result__left img {
-  width: 75px;
-  height: 75px;
-  object-fit: contain;
-}
-
-.search-result__right {
-  flex: 1;
-  min-width: 0;
-  text-align: left;
-}
-
-.search-result__right * {
-  margin: 0px;
-  margin-top: 5px;
-  margin-bottom: 5px;
-
-  flex: 1;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
